Downgrade java version 18 -> 8 (1.8)